--- a/test/CacheService.Demo/CacheService.Demo.csproj
+++ b/test/CacheService.Demo/CacheService.Demo.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\PandaNuGet\PandaNuGet.csproj"/>
+        <ProjectReference Include="..\..\src\CacheService\CacheService.csproj" />
     </ItemGroup>
 
 </Project>
