--- a/test/CacheService.Tests/CacheService.Tests.csproj
+++ b/test/CacheService.Tests/CacheService.Tests.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\PandaNuGet\PandaNuGet.csproj"/>
+        <ProjectReference Include="..\..\src\CacheService\CacheService.csproj" />
     </ItemGroup>
 
 </Project>
