--- a/src/DistributedCache/DistributedCache.csproj
+++ b/src/DistributedCache/DistributedCache.csproj
@@ -9,11 +9,11 @@
         <Authors>Pandatech</Authors>
         <Copyright>MIT</Copyright>
         <Version>1.0.0</Version>
-        <PackageId>Pandatech.CacheService</PackageId>
-        <Title>Pandatech Cache Service</Title>
+        <PackageId>Pandatech.DistributedCache</PackageId>
+        <Title>Pandatech Distributed Cache</Title>
         <PackageTags>Pandatech, library, redis, distributed locks, cache</PackageTags>
-        <Description>Pandatech Cache Service is a comprehensive caching library designed for .NET applications, leveraging the power of Redis. It provides easy-to-use and highly configurable caching mechanisms, including support for tagged cache entries, customizable expiration policies, and robust health check services. The library also features built-in distributed lock mechanisms to ensure data consistency and prevent cache stampedes. This ensures high performance, scalability, and reliability, making it an ideal choice for enterprise-level distributed caching needs.</Description>
-        <RepositoryUrl>https://github.com/PandaTechAM/be-lib-cache-service</RepositoryUrl>
+        <Description>Pandatech.DistributedCache is a comprehensive caching library designed for .NET applications, leveraging the power of Redis. It provides easy-to-use and highly configurable caching mechanisms, including support for tagged cache entries, customizable expiration policies, and robust health check services. The library also features built-in distributed lock mechanisms to ensure data consistency and prevent cache stampedes. This ensures high performance, scalability, and reliability, making it an ideal choice for enterprise-level distributed caching needs.</Description>
+        <RepositoryUrl>https://github.com/PandaTechAM/be-lib-distributed-cache</RepositoryUrl>
         <PackageReleaseNotes>InitialCommit</PackageReleaseNotes>
     </PropertyGroup>
 
