--- a/test/DistributedCache.Demo/DistributedCache.Demo.csproj
+++ b/test/DistributedCache.Demo/DistributedCache.Demo.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
+        <RootNamespace>CacheService.Demo</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\CacheService\CacheService.csproj" />
+        <ProjectReference Include="..\..\src\DistributedCache\DistributedCache.csproj" />
     </ItemGroup>
 
 </Project>
