--- a/test/DistributedCache.Tests/DistributedCache.Tests.csproj
+++ b/test/DistributedCache.Tests/DistributedCache.Tests.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\CacheService\CacheService.csproj" />
+        <ProjectReference Include="..\..\src\DistributedCache\DistributedCache.csproj" />
     </ItemGroup>
 
 </Project>
